--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,9 +107,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='Education'>
         <Card
           as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei.'
-          date='August 2021 - July 2025'
+          heading='香港大学'
+          subheading='MultiMedia Lab, Research Intern'
+          date='Feb 2025 - Present'
           href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         >
           {
@@ -122,6 +122,13 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         </ul> */
           }
         </Card>
+        <Card
+          as='a'
+          heading='西安交通大学'
+          subheading='智能网络与网络安全教育部重点实验室, Research Assistant'
+          date='Aug 2023 - Present'
+          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
+        ></Card>  
       </Section>
 
       <Section title='Website List'>
