--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,7 +110,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           heading='香港大学'
           subheading='MultiMedia Lab, Research Intern'
           date='Feb 2025 - Present'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
+          href='https://mmlab.ie.cuhk.edu.hk/people.html'
         >
           {
             /* <ul class='ms-4 list-disc text-muted-foreground'>
@@ -127,7 +127,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           heading='西安交通大学'
           subheading='智能网络与网络安全教育部重点实验室, Research Assistant'
           date='Aug 2023 - Present'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
+          href='https://www.xjtu.edu.cn/xynr.jsp?wbtreeid=1634&wbxjtucollegeid=241'
         ></Card>  
       </Section>
 
