--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,12 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           >
             <Icon name='github' class='size-5' slot='icon' />
           </Label>
+          <Label title='Email' as='a' href='mailto:wjz2930608106@stu.xjtu.edu.cn'>
+            <Icon name='email' class='size-5' slot='icon' />
+          </Label>
+          <Label title='Scholar' as='a' href='https://scholar.google.com/citations?user=UgKRQJwAAAAJ&hl=en&oi=ao'>
+            <Icon name='earth' class='size-5' slot='icon' />
+            </Label>
         </div>
       </div>
 
