--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -29,13 +29,12 @@ const headings = [
   {/* general-talk */}
   <h2 id='hobbies'>Hobbies</h2>
   <ul>
-    <li>Lorem ipsum dolor sit amet, vidit suscipit at mei.</li>
+    <li>油画。</li>
     <li>
-      Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod
-      voluptua ne.
+      音乐，我在2023年开始尝试使用SD制作音MAD，先前学过小提琴与声乐，分别通过七级与十级考试。现在主要关注VOCALOID单曲或ACG新OP，最喜欢的VOCALOID制作人是<a href="https://x.com/DECO27" target="_blank" rel="noopener noreferrer">DECO27</a>。
     </li>
-    <li>Ex dicat impedit mel, at eum oratio possit voluptatum.</li>
-    <li>Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.</li>
+    <li>旅行与摄影，正在为入手一套不错的镜头努力。</li>
+    <li>阅读，最喜欢意识流以及半纪实作品。</li>
   </ul>
 
   {/* tools */}
