--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,7 +114,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         <Card
           as='a'
           heading='香港大学'
-          subheading='MultiMedia Lab, Research Intern'
+          subheading='MultiMedia Lab, 访问学生'
           date='Feb 2025 - Present'
           href='https://mmlab.ie.cuhk.edu.hk/people.html'
         >
@@ -131,7 +131,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         <Card
           as='a'
           heading='西安交通大学'
-          subheading='智能网络与网络安全教育部重点实验室, Research Assistant'
+          subheading='智能网络与网络安全教育部重点实验室, 研究助理'
           date='Aug 2023 - Present'
           href='https://www.xjtu.edu.cn/xynr.jsp?wbtreeid=1634&wbxjtucollegeid=241'
         ></Card>  
