--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <Label title='Email' as='a' href='mailto:wjz2930608106@stu.xjtu.edu.cn'>
             <Icon name='email' class='size-5' slot='icon' />
           </Label>
-          <Label title='Scholar' as='a' href='https://scholar.google.com/citations?user=UgKRQJwAAAAJ&hl=en&oi=ao'>
+          <Label title='Scholar' as='a' href='https://scholar.google.com/citations?user=UgKRQJwAAAAJ&hl=en&oi=ao' target='_blank'>
             <Icon name='earth' class='size-5' slot='icon' />
             </Label>
         </div>
