--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,6 +117,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           subheading='MultiMedia Lab, 访问学生'
           date='Feb 2025 - Present'
           href='https://mmlab.ie.cuhk.edu.hk/people.html'
+          target="_blank"
         >
           {
             /* <ul class='ms-4 list-disc text-muted-foreground'>
