--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -17,22 +17,22 @@ const { friends } = links
 const linksConf = config.integ.links
 ---
 
-<PageLayout title='Links' {headings} info='/links'>
-  <p>怎么可能有顺序呢，当然是随机的~</p>
+<PageLayout title='友人帐' {headings} info='/links'>
+  <p>感谢所有曾经以及现在依然陪伴在我身边的朋友。</p>
   <h2 id='common-links'>Common Links</h2>
   <FriendList list={friends[0]} />
-  <Collapse title='Links with Bad Status'>
+  <!--Collapse title='Links with Bad Status'>
     <FriendList list={friends[1]} />
-  </Collapse>
-  <Collapse title='Link History Book'>
+  </Collapse-->
+  <!--Collapse title='Link History Book'>
     <Timeline events={linksConf.logbook} />
-  </Collapse>
+  </Collapse-->
   <h2 id='special-links'>Special Links</h2>
   <FriendList list={friends[2]} />
 
   <!-- apply-links -->
   <h2 id='apply-links'>Apply Links</h2>
-  <p>本站信息如下（点击快速复制）：</p>
+  <p>本站信息如下（just click to get a quick copy）：</p>
   <blockquote class='not-prose grid grid-cols-[auto_1fr] gap-x-2 break-words border-s-4 ps-4'>
     {
       linksConf.applyTip.map(({ name, val }) => {
@@ -53,12 +53,7 @@ const linksConf = config.integ.links
     申请时还请按照这个模板留言（<a
       href='https://github.com/cworld1/astro-theme-pure/blob/main/public/links.json'
       target='_blank'>提交 PR</a
-    > 或许也是个更快的办法）。此外有关申请说明：
+    > 或许也是个更快的办法）。
   </p>
-  <ul>
-    <li>在你的友链上添加了本站；</li>
-    <li>请确保你的站点活着；</li>
-    <li>博客内容不违反国家法律。</li>
-  </ul>
   <Comment slot='bottom' />
 </PageLayout>
