docs:modify source

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,10 +113,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='Education'>
         <Card
           as='a'
-          heading='香港大学'
-          subheading='MultiMedia Lab, 访问学生'
-          date='Feb 2025 - Present'
-          href='https://mmlab.ie.cuhk.edu.hk/people.html'
+          heading='西湖大学'
+          subheading='LinsLab, 访问学生'
+          date='Nov 2024 - Feb 2025'
+          href='https://lins-lab.github.io/'
           target="_blank"
         >
           {
