--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='About'>
         <p class='text-muted-foreground'>Junior Undergraduate @ XJTU / Genrative AI and ML theory Researcher</p>
         <p class='text-muted-foreground'>
-          您好，我是void，一名来自西安交通大学2022级计算机试验班的学生。现在我主要从事生成模型reasoning与大模型可解释性的研究，如果您有意向与我合作或者交流，请随时联系我。
+          您好，我是void，一名来自西安交通大学2022级计算机试验班的学生。本科期间我曾经做过机器学习理论，图神经网络，AIGC与多模态大模型方向的研究，现在主要从事embodied AI与3DV方向的研究工作。如果您有意向与我合作或者交流，请随时联系我。
         </p>
         <Button title='More about me' class='w-fit self-end' href='/about' style='ahead' />
       </Section>
