--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,6 +113,15 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='Experience'>
         <Card
           as='a'
+          heading='北京大学'
+          subheading='智能学院, Ph.D. candidate'
+          date='Sept 2026 - Jun 2031'
+          href='https://www.cis.pku.edu.cn/'
+          target="_blank"
+        ></Card>
+
+        <Card
+          as='a'
           heading='西湖大学'
           subheading='LinsLab, 访问学生'
           date='Nov 2024 - Feb 2025'
