--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,15 +115,24 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           as='a'
           heading='北京大学'
           subheading='智能学院, Ph.D. candidate'
-          date='Sept 2026 - Jun 2031'
+          date='Sept 2026 - Jun 2031(expected)'
           href='https://www.cis.pku.edu.cn/'
           target="_blank"
         ></Card>
 
         <Card
           as='a'
+          heading='欧洲核子研究中心(CERN)'
+          subheading='AMSlab, visiting student'
+          date='Jan 2025 - Feb 2025'
+          href='https://home.cern/'
+          target="_blank"
+        ></Card>
+
+        <Card
+          as='a'
           heading='西湖大学'
-          subheading='LinsLab, 访问学生'
+          subheading='LinsLab, intern'
           date='Nov 2024 - Feb 2025'
           href='https://lins-lab.github.io/'
           target="_blank"
@@ -141,7 +150,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         <Card
           as='a'
           heading='西安交通大学'
-          subheading='智能网络与网络安全教育部重点实验室, 研究助理'
+          subheading='BKDElab, Research assistant'
           date='Aug 2023 - Present'
           href='https://www.xjtu.edu.cn/xynr.jsp?wbtreeid=1634&wbxjtucollegeid=241'
         ></Card>  
