--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,6 +115,15 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
         <Card
           as='a'
+          heading='南洋理工大学'
+          subheading='S-lab, visiting student'
+          date='July 2025 - Present'
+          href='https://liuziwei7.github.io/'
+          Advisor: Ziwei Liu
+          target="_blank"
+        ></Card>
+        <Card
+          as='a'
           heading='欧洲核子研究中心(CERN)'
           subheading='AMSlab, visiting student'
           date='Jan 2025 - Feb 2025'
