--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,14 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
     </Section> */
       }
       <Section title='Experience'>
-
+        <Card
+          as='a'
+          heading='LibLib'
+          subheading='Intern'
+          date='July 2025 - Present'
+          href='https://www.liblib.art/'
+          target="_blank"
+        ></Card>
 
         <Card
           as='a'
