--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,10 +113,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <Section title='Experience'>
         <Card
           as='a'
-          heading='LibLib'
+          heading='Lovert AI'
           subheading='Intern'
           date='July 2025 - Present'
-          href='https://www.liblib.art/'
+          href='https://www.lovart.ai/'
           target="_blank"
         ></Card>
 
