--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,9 +60,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Junior Undergraduate @ XJTU / Genrative AI and ML theory Researcher</p>
+        <p class='text-muted-foreground'>Junior Undergraduate @ XJTU / Genrative AI Researcher</p>
         <p class='text-muted-foreground'>
-          您好，我是void，一名来自西安交通大学2022级计算机试验班的学生。本科期间我曾经做过机器学习理论，图神经网络，AIGC与多模态大模型方向的研究，现在主要从事embodied AI与3DV方向的研究工作。如果您有意向与我合作或者交流，请随时联系我。
+          您好，我是void，一名来自西安交通大学2022级计算机试验班的学生, 我对AIGC， World model与具身智能均有浓厚兴趣， 欢迎随时联系我交流。
         </p>
         <Button title='More about me' class='w-fit self-end' href='/about' style='ahead' />
       </Section>
@@ -160,7 +160,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           as='a'
           heading='西安交通大学'
           subheading='BKDElab, Research assistant'
-          date='Aug 2023 - Present'
+          date='Aug 2023 - Octorber 2024'
           href='https://www.xjtu.edu.cn/xynr.jsp?wbtreeid=1634&wbxjtucollegeid=241'
         ></Card>  
       </Section>
