--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -15,7 +15,7 @@ const headings = [
 ---
 
 <PageLayout title='About' {headings} info='/about'>
-  <p>Junior Undergraduate @ XJTU / Generative AI and ML theory Researcher</p>
+  <p>Junior Undergraduate @ XJTU / Generative AI Researcher</p>
   <p>
     你好，我是Void，一名来自西安交通大学计算机试验班的2022级本科生，现在我主要从事生成模型，视觉语言模型和大模型可解释性的研究工作，
     欢迎随时联系我。
@@ -33,7 +33,7 @@ const headings = [
     <li>
       音乐，我在2023年开始尝试使用SD制作音MAD，先前学过小提琴与声乐，分别通过七级与十级考试。现在主要关注VOCALOID单曲或ACG新OP，最喜欢的VOCALOID制作人是<a href="https://x.com/DECO27" target="_blank" rel="noopener noreferrer">DECO27</a>。
     </li>
-    <li>旅行与摄影，正在为入手一套不错的镜头努力。</li>
+    <li>旅行，目前我更喜欢海外国度的探索，我造访过：悉尼，日内瓦，苏黎世，洛桑，波尔图与巴黎。</li>
     <li>阅读，最喜欢意识流以及半纪实作品。</li>
   </ul>
 
